--- a/_artists/2016-10-28-pleiades.md
+++ b/_artists/2016-10-28-pleiades.md
@@ -3,7 +3,7 @@ image: /images/artists/80-rock.jpg
 city: 'Belo Horizonte, MG'
 type: Banda
 genre: Rock
-published: false
+published: true
 title: Pleiades
 portfolio: youtube.com/bandapleiades
 email: arizza.produtora@gmail.com
