--- a/_artists/2016-10-28-kaiwo.md
+++ b/_artists/2016-10-28-kaiwo.md
@@ -3,11 +3,11 @@ image: /images/artists/80-rock.jpg
 city: 'Belo Horizonte, MG'
 type: Solo
 genre: Deep House
-published: false
-title: Kaiwo
+published: true
+title: KAIWO
 portfolio: soundcloud.com/kaiwomusic
 email: joao_marinhotavares@hotmail.com
 phone: 31 98591-8757
 facebook: joaomarcos.tavares.10?fref=ts
 ---
-Menos de um ano de carreira, já toquei em diversas casa de BH, já possuo datas em evento grandes como Four Loko, Alive BH e outras. 
+Menos de um ano de carreira, já toquei em diversas casa de BH, já possuo datas em evento grandes como Four Loko, Alive BH e outras.
