--- a/_artists/2016-10-28-kaiwo.md
+++ b/_artists/2016-10-28-kaiwo.md
@@ -2,7 +2,7 @@
 image: /images/artists/80-rock.jpg
 city: 'Belo Horizonte, MG'
 type: Solo
-genre: Deep House
+genre: House
 published: true
 title: KAIWO
 portfolio: soundcloud.com/kaiwomusic
