--- a/_artists/2016-10-28-kaiwo.md
+++ b/_artists/2016-10-28-kaiwo.md
@@ -1,7 +1,7 @@
 ---
 image: /images/artists/80-rock.jpg
 city: 'Belo Horizonte, MG'
-type: Solo
+type: DJ
 genre: House
 published: true
 title: KAIWO
