--- a/_artists/2016-10-28-kaiwo.md
+++ b/_artists/2016-10-28-kaiwo.md
@@ -2,7 +2,8 @@
 image: /images/artists/80-rock.jpg
 city: 'Belo Horizonte, MG'
 type: DJ
-genre: House
+genre:
+  - House
 published: true
 title: KAIWO
 portfolio: soundcloud.com/kaiwomusic
