--- a/_artists/2016-10-28-pleiades.md
+++ b/_artists/2016-10-28-pleiades.md
@@ -2,7 +2,8 @@
 image: /images/artists/80-rock.jpg
 city: 'Belo Horizonte, MG'
 type: Banda
-genre: Rock
+genre:
+  - Rock
 published: true
 title: Pleiades
 portfolio: youtube.com/bandapleiades
