--- a/_artists/2016-10-28-pleiades.md
+++ b/_artists/2016-10-28-pleiades.md
@@ -11,16 +11,4 @@ email: arizza.produtora@gmail.com
 facebook: pleiadesoficial
 phone: '31994714597'
 ---
-Em 2016 o Pleiades está completando 10 anos. Neste período fez mais de 350 shows, tendo se apresentado em diversas regiões do país desde Lajes – SC a Palmas – TO passando por Brasília, Rio de Janeiro, Espírito Santo além de diversas de São Paulo e Minas Gerais. 
-
-Resumo da história da banda
- 
-Quando tinha nove anos, André Mendonça teve a ideia de criar o Pleiades e pediu ao pai para formar uma banda. Ele levou a ideia para a escola de música onde o filho estudava que indicou os músicos na faixa etária para o Pleiades. Inicialmente tocavam músicas de ídolos como Metallica, AC/DC, Kiss, Ramones. Aos poucos foram incluindo músicas próprias no repertório.
-  
-As primeiras músicas foram em inglês, porém em 2013 decidiram apostar em composições em português. Em razão desta mudança a vocalista original deixou a banda.
- 
-O ano de 2014 foi de transição com a entrada da atual vocalista, Vivien Tomasello, e com a mudança de idioma nas composições. A banda trabalhou em novas ideias para em 2015 entrar em estúdio e gravar o segundo CD.
- 
-Porém no final de 2014, o Pleiades sofreu o maior choque de sua história. Dois dias após finalizar a gravação da primeira música que fará parte do segundo CD, o então baixista Mateus Olivello sofreu um acidente e veio a falecer.
-   
-Entre as conquistas, com um ano de existência se classificou em um honroso 9º lugar entre 1.100 bandas de 34 países no concurso “The Next Big Thing”, realizado pela BBC de Londres em 2006. Em setembro de 2010, o Pleiades foi uma das 18 bandas selecionadas entre 280 inscritas para o festival “Palco 98”, promovido pela rádio 98 FM de Belo Horizonte e a MTV Minas, terminando entre as 6 semifinalistas. Em maio de 2012 foi vencedora da primeira edição do festival Meltdown, em São Paulo, concorrendo com 70 bandas. Também em 2012, o Pleiades se destacou nacionalmente, ao ser a única banda de rock a chegar à fase final do programa Astros – Nova Geração
+Com mais de 10 anos de carreira, o Pleiades já completou mais de 350 shows, se apresentando por todo o Brasil. Tocando desde sucessos do rock, hard rock e metal internacionais e nacionais até composições próprias, já venceram um concurso promovido pela BBC de Londres em 2007, participaram do programa de TV Astros em 2012, e dividiram palcos com grandes nomes como Deep Purple, Sepultura, Creed e Nightwish.
