--- a/_artists/2016-10-28-kaiwo.md
+++ b/_artists/2016-10-28-kaiwo.md
@@ -3,6 +3,7 @@ image: /images/artists/KAIWO.jpg
 city: 'Belo Horizonte, MG'
 type: DJ
 genre:
+  - Deep House
   - House
 published: true
 title: KAIWO
