--- a/_artists/2016-10-28-kaiwo.md
+++ b/_artists/2016-10-28-kaiwo.md
@@ -7,7 +7,7 @@ genre:
   - House
 published: true
 title: KAIWO
-portfolio: soundcloud.com/kaiwomusic
+portfolio: 'http://soundcloud.com/kaiwomusic'
 email: joao_marinhotavares@hotmail.com
 phone: 31 98591-8757
 facebook: kaiwomusic/?pnref=lhc&__mref=message_bubble
