--- a/_artists/2016-10-28-pleiades.md
+++ b/_artists/2016-10-28-pleiades.md
@@ -6,7 +6,7 @@ genre:
   - Rock
 published: true
 title: Pleiades
-portfolio: youtube.com/bandapleiades
+portfolio: 'http://youtube.com/bandapleiades'
 email: arizza.produtora@gmail.com
 facebook: pleiadesoficial
 phone: '31994714597'
