--- a/_artists/2016-10-28-kaiwo.md
+++ b/_artists/2016-10-28-kaiwo.md
@@ -8,6 +8,8 @@ portfolio: 'http://soundcloud.com/kaiwomusic'
 email: joao_marinhotavares@hotmail.com
 phone: 31 98591-8757
 facebook: kaiwomusic/?pnref=lhc&__mref=message_bubble
+genre:
+  - Eletrônica
 ---
 Com menos de um ano de carreira, porém com grande talento e esforço, João Tavares já se apresentou em diversas casas noturnas de BH, como a Major Lock, o Clube Chalezinho, o Nosso Botequim e o Corneta Espeto Clube, além de ter participado de grandes eventos, como a Four Loko e a Alive BH.
 
