--- a/_artists/2016-11-02-konstan.md
+++ b/_artists/2016-11-02-konstan.md
@@ -2,7 +2,7 @@
 image: /images/artists/KONSTAN.jpg
 city: 'Belo Horizonte, MG'
 type: DJ
-published: false
+published: true
 title: KONSTAN
 genre:
   - Eletrônica
