--- a/_artists/2016-11-02-konstan.md
+++ b/_artists/2016-11-02-konstan.md
@@ -8,7 +8,7 @@ genre:
   - Eletrônica
 portfolio: 'https://soundcloud.com/konstanmusic/house-beats'
 facebook: 'Konstan-503546799829577/?fref=ts '
-email: magnonominato2gmail.com
+email: magnonominato@gmail.com
 phone: (31)996027536
 ---
 Jovem talento no cenário eletrônico de Belo Horizonte, Magno Nominato, ou KONSTAN, possui experiência como DJ e produtor musical, e já passou por diversas casas noturnas da cidade, como o Deputamadre Club, Major Lock, Hangar 677 e o Clube Chalezinho.
