--- a/_artists/2016-11-02-konstan.md
+++ b/_artists/2016-11-02-konstan.md
@@ -6,6 +6,7 @@ published: false
 title: KONSTAN
 genre:
   - Eletrônica
+  - Teste
 portfolio: 'https://soundcloud.com/konstanmusic/house-beats'
 facebook: 'Konstan-503546799829577/?fref=ts '
 email: magnonominato@gmail.com
