--- a/_artists/2016-10-28-kaiwo.md
+++ b/_artists/2016-10-28-kaiwo.md
@@ -6,7 +6,7 @@ published: true
 title: KAIWO
 portfolio: 'http://soundcloud.com/kaiwomusic'
 email: joao_marinhotavares@hotmail.com
-phone: 31 98591-8757
+phone: (31) 9 8591-8757
 facebook: kaiwomusic/?pnref=lhc&__mref=message_bubble
 genre:
   - Eletrônica
