--- a/_artists/2016-10-28-pleiades.md
+++ b/_artists/2016-10-28-pleiades.md
@@ -9,6 +9,6 @@ title: Pleiades
 portfolio: 'http://youtube.com/bandapleiades'
 email: arizza.produtora@gmail.com
 facebook: pleiadesoficial
-phone: '31994714597'
+phone: (31) 9 9471-4597
 ---
 Com mais de 10 anos de carreira, o Pleiades já completou mais de 350 shows, se apresentando por todo o Brasil. Tocando desde sucessos do rock, hard rock e metal internacionais e nacionais até composições próprias, já venceram um concurso promovido pela BBC de Londres em 2007, participaram do programa de TV Astros em 2012, e dividiram palcos com grandes nomes como Deep Purple, Sepultura, Creed e Nightwish.
