--- a/_artists/2016-11-07-vini-o.md
+++ b/_artists/2016-11-07-vini-o.md
@@ -8,7 +8,7 @@ portfolio: 'https://www.youtube.com/user/vinicaooficial?sub_confirmation=1'
 twitter: vinicaooficial
 facebook: vinicaooficial
 email: contato.vinicao@gmail.com
-phone: 31 99236-1636
+phone: (31) 99236-1636
 ---
 ## A New Post
 
