--- a/_artists/2016-11-07-vini-o.md
+++ b/_artists/2016-11-07-vini-o.md
@@ -9,6 +9,8 @@ twitter: vinicaooficial
 facebook: vinicaooficial
 email: contato.vinicao@gmail.com
 phone: (31) 99236-1636
+genre:
+  - Rap
 ---
 ## A New Post
 
