--- a/_artists/2016-11-07-vini-o.md
+++ b/_artists/2016-11-07-vini-o.md
@@ -12,6 +12,4 @@ phone: (31) 99236-1636
 genre:
   - Rap
 ---
-## A New Post
-
-Enter text in [Markdown](http://daringfireball.net/projects/markdown/). Use the toolbar above, or click the **?** button for formatting help.
+O MC mineiro Vinição é um jovem talento do rap nacional. Experiente em batalhas de rap desde adolescente, hoje já divulga o primeiro videoclipe de sua carreira, com produção do beatmaker que já trabalhou com Emicida e Rashid, da música "Minha Vez, Minha Quebrada", que integrará seu novo EP, "Essa Fita Memo". O trabalho de Vinição já conta com mais de 150mil visualizações no Youtube, Soundcloud e Spotify.
