--- a/_artists/2016-11-07-vini-o.md
+++ b/_artists/2016-11-07-vini-o.md
@@ -1,5 +1,5 @@
 ---
-image: /images/artists/80-rock.jpg
+image: /images/artists/Vinição.jpg
 city: 'Belo Horizonte, MG'
 type: Solo
 published: false
