--- a/_artists/2016-11-07-vini-o.md
+++ b/_artists/2016-11-07-vini-o.md
@@ -2,7 +2,7 @@
 image: /images/artists/Vinição.jpg
 city: 'Belo Horizonte, MG'
 type: Solo
-published: false
+published: true
 title: Vinição
 portfolio: 'https://www.youtube.com/user/vinicaooficial?sub_confirmation=1'
 twitter: vinicaooficial
