--- a/_artists/2016-11-07-vini-o.md
+++ b/_artists/2016-11-07-vini-o.md
@@ -4,7 +4,7 @@ city: 'Belo Horizonte, MG'
 type: Solo
 published: true
 title: Vinição
-portfolio: 'https://www.youtube.com/user/vinicaooficial?sub_confirmation=1'
+portfolio: 'https://www.youtube.com/user/vinicaooficial/videos'
 twitter: vinicaooficial
 facebook: vinicaooficial
 email: contato.vinicao@gmail.com
