--- a/_artists/2016-11-11-devise.md
+++ b/_artists/2016-11-11-devise.md
@@ -6,12 +6,11 @@ published: false
 title: Devise
 genre:
   - Rock
+  - Indie
 portfolio: 'http://www.youtube.com/deviseoficial'
 facebook: deviseoficial
 twitter: deviseoficial
 email: deviseoficial@gmail.com
 phone: (37) 9 9985-0220
 ---
-## A New Post
-
-Enter text in [Markdown](http://daringfireball.net/projects/markdown/). Use the toolbar above, or click the **?** button for formatting help.
+Formada por Luís Couto, Bruno Vieira, André Carvalho e Daniel Mascarenhas, a banda Devise mistura indie rock, britpop e influências dos anos 60, fazendo um som despretensioso e longe de estereótipos. Embora o quarteto siga um estilo autoral, com letras originais e em português, basta escutar algumas vezes o disco ou ter ouvidos sensíveis para perceber a importância de bandas como Oasis, The Smiths, The Strokes, Nirvana, The Velvet Underground e até mesmo artistas como Lô Borges para a formação do grupo. As composições, por sua vez, embaladas por riffs marcantes de guitarras, mesclados com a voz rasgada do vocalista, têm um tom meio existencialista.
