--- a/_artists/2016-11-11-duprado.md
+++ b/_artists/2016-11-11-duprado.md
@@ -12,6 +12,4 @@ facebook: dupradooficial
 email: bandaduprado@gmail.com
 phone: (31) 9 8798-3130
 ---
-## A New Post
-
-Enter text in [Markdown](http://daringfireball.net/projects/markdown/). Use the toolbar above, or click the **?** button for formatting help.
+A DuPrado é uma banda mineira de pop rock formada por um vocalista, um baixista, um baterista e dois guitarristas. Seus shows contam com um repertório coberto de sucessos do pop rock e rock nacionais, como Capital Inicial, Charlie Brown Jr. e Jota Quest, além de internacionais, como Green Day, Foo Fighters e John Mayer.
