--- a/_artists/2016-11-11-riviera.md
+++ b/_artists/2016-11-11-riviera.md
@@ -12,6 +12,4 @@ phone: (61) 9 9268-6639
 genre:
   - Rock
 ---
-## A New Post
-
-Enter text in [Markdown](http://daringfireball.net/projects/markdown/). Use the toolbar above, or click the **?** button for formatting help.
+O Riviera é um projeto promissor e independente, que reflete de maneira transparente a mente de seu criador. Cantado em português, com letras profundas, acordes dissonantes, pegada forte, e uma voz que intercala entre o suave e o distorcido, a banda traz um som que navega entre o rock alternativo, post-grunge até o rock progressivo. Aposta em um som com influências de Silverchair, A Perfect Circle, Tool, entre tantas outras.
