--- a/_artists/2016-11-11-devise.md
+++ b/_artists/2016-11-11-devise.md
@@ -1,5 +1,5 @@
 ---
-image: /images/artists/80-rock.jpg
+image: /images/artists/Devise.jpg
 city: 'Belo Horizonte, MG'
 type: Banda
 published: false
