--- a/_artists/2016-11-11-devise.md
+++ b/_artists/2016-11-11-devise.md
@@ -2,7 +2,7 @@
 image: /images/artists/Devise.jpg
 city: 'Belo Horizonte, MG'
 type: Banda
-published: false
+published: true
 title: Devise
 genre:
   - Rock
