--- a/_artists/2016-11-11-duprado.md
+++ b/_artists/2016-11-11-duprado.md
@@ -1,8 +1,8 @@
 ---
-image: /images/artists/80-rock.jpg
+image: /images/artists/DuPrado.jpg
 city: 'Belo Horizonte, MG'
 type: Banda
-published: false
+published: true
 title: DuPrado
 portfolio: 'https://www.facebook.com/dupradooficial/videos/1696208957267516/'
 genre:
