--- a/_artists/2016-11-11-riviera.md
+++ b/_artists/2016-11-11-riviera.md
@@ -1,8 +1,8 @@
 ---
-image: /images/artists/80-rock.jpg
+image: /images/artists/Riviera.jpg
 city: 'Belo Horizonte, MG'
 type: Banda
-published: false
+published: true
 title: Riviera
 portfolio: 'https://projetoriviera.bandcamp.com/'
 facebook: projetoriviera
