--- a/_artists/2016-10-28-kaiwo.md
+++ b/_artists/2016-10-28-kaiwo.md
@@ -11,6 +11,6 @@ facebook: kaiwomusic/?pnref=lhc&__mref=message_bubble
 genre:
   - Eletrônica
 ---
-Com menos de um ano de carreira, porém com grande talento e esforço, João Tavares já se apresentou em diversas casas noturnas de BH, como a Major Lock, o Clube Chalezinho, o Nosso Botequim e o Corneta Espeto Clube, além de ter participado de grandes eventos, como a Four Loko e a Alive BH.
+Com menos de um ano de carreira, porém com grande talento e esforço, João Tavares já se apresentou em diversas casas noturnas de BH, como a Major Lock, o Clube Chalezinho, o Nosso Botequim, Vitta, Deputamadre e o Corneta Espeto Clube, além de ter participado de grandes eventos, como a Four Loko e a Alive BH.
 
 O DJ KAIWO se apresenta com sets contendo os maiores sucessos do house, deep house e do "brazilian bass".
